--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.10"
+    ext.dagger_version = "2.28"
+    ext.dagger_assisted_inject_version = "0.6.0"
     repositories {
         google()
         jcenter()
